# paddlr

./: .gitignore  README.md  makefile  nginx.conf  prime_file.xml
cartographer/: .gitignore  Cargo.toml
cartographer/src/: convert.rs  face_node.rs  main.rs  string_pulling_reference.cpp
cartographer/src/database/: compute_route.sql  db_init.sql  pathfinding.sql  style.lua
deployment/: Dockerfile.cartographer  Dockerfile.kiosk  Dockerfile.postgres  docker-compose.yml
kiosk/: .gitignore  package-lock.json  package.json
kiosk/src/: App.js  SimpleMap.js  index.js
kiosk/src/components/Button/: Button.css  Button.jsx
kiosk/src/components/Dropdown/: Dropdown.css  Dropdown.jsx
kiosk/src/components/LoadingIndicator/: LoadingIndicator.css  LoadingIndicator.jsx
kiosk/src/util/: api.js  constants.js  util.js
scripts/: geojson2postgis.sh  osm2pgrouting_convert.sh  osm2postgis.sh  overpass_query.opq
