[package]
name = "cartographer"
version = "0.1.0"
edition = "2021"

[dependencies]
geo = "0.29.1"
geo-types = "0.7.13"
geojson = "0.24.1"
log = "0.4.22"
reqwest = "0.12.9"
rocket = "0.5.1"
serde = "1.0.214"
serde_json = "1.0.132"
serde_path_to_error = "0.1.16"


[profile.dev.build-override]
opt-level = 3
