[package]
name = "cartographer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
flamegraph = "0.6.8"
geo = "0.29.1"
geo-postgis = "0.2.2"
geo-types = "0.7.13"
geojson = "0.24.1"
log = "0.4.22"
pathfinding = "4.14.0"
postgis = "0.9.0"
postgres = "0.19.10"
proj = "0.28.0"
reqwest = "0.12.9"
rocket = "0.5.1"
serde = "1.0.214"
serde_json = "1.0.132"
serde_path_to_error = "0.1.16"
spade = "2.13.1"
tokio-postgres = "0.7.13"

[profile.dev.build-override]
opt-level = 3
